添加运行时权限和压缩功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">cameraDemo</string>
+    <string name="app_name">录制小视频</string>
 </resources>
